# cc-services

./: .gitignore  Cargo.toml  LICENSE  README.md
.depl/: config.yaml
cc-auth/: Cargo.toml  README.md
cc-auth/.depl/: config.yaml
cc-error-pages/: Cargo.toml
cc-error-pages/src/: main.rs
cc-server-example/: Cargo.toml  server-example.yaml
cc-server-example/src/: main.rs
cc-server-kit/: Cargo.toml
cc-static-server/: Cargo.toml
cc-static-server/src/: static_routes.rs
cc-ui-kit/: Cargo.toml  README.md  deploy-config.json
cc-ui-kit-leptos-test/: Cargo.toml
cc-ui-kit-leptos-test/.depl/: config.yaml
cc-ui-kit-leptos-test/public/: tailwind.css
cc-ui-kit-leptos-test/src/: main.rs
cc-ui-kit/.depl/: config.yaml
cc-ui-kit/examples/: index.html
cc-ui-kit/src/: lib.rs  prelude.rs  router.rs  utils.rs
cc-utils/: Cargo.toml  README.md
cc-utils/.depl/: config.yaml
cc-utils/src/: lib.rs  responses.rs
