[workspace]
members = [
  "cc-auth",
  "cc-utils",
]
resolver = "2"

[workspace.dependencies]
cc-utils = { version = "0.5.7", path = "cc-utils", default-features = false }

anyhow = "1"
bb8-redis = "0.20"
chrono = { version = "0.4", default-features = false }
passwords = "3.1"
reqwest = { git = "https://github.com/markcda/reqwest.git", branch = "msgpack-support", default-features = false }
rmp-serde = "1.3"
salvo = { version = "0.77", default-features = false }
serde = { version = "1", default-features = false }
serde_json = "1"
sha3 = "0.10"
tracing = "0.1"
