[workspace]
members = [
  "cc-auth",
  "cc-utils",
  "cc-ui-kit",
  "cc-ui-kit-leptos-test",
  "cc-error-pages",
]
resolver = "2"

[workspace.dependencies]
cc-utils = { version = "0.5.7", path = "cc-utils", default-features = false }
cc-ui-kit = { version = "0.1.0-alpha-10", path = "cc-ui-kit" }

anyhow = "1"
bb8-redis = "0.20"
chrono = { version = "0.4", default-features = false }
console_error_panic_hook = "0.1.7"
console_log = "1"
icondata = "0.5"
leptos = { version = "0.7", default-features = false }
leptos_i18n = { version = "0.5", default-features = false }
leptos_meta = "0.7"
leptos_router = "0.7"
leptos-use = { version = "0.15.5", default-features = false }
log = "0.4"
lucide-leptos = "1.1"
palette = "0.7"
passwords = "3.1"
reqwest = { git = "https://github.com/markcda/reqwest.git", branch = "msgpack-support", default-features = false }
rmp-serde = "1.3"
salvo = { version = "0.77", default-features = false }
serde = { version = "1", default-features = false }
serde_json = "1"
sha3 = "0.10"
thaw = { version = "0.4.1", default-features = false }
tracing = "0.1"
web-sys = { version = "0.3", default-features = false }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
