[workspace]
members = [
  "cc-auth",
  "cc-utils",
  "cc-ui-kit",
  "cc-ui-kit-leptos-test",
  "cc-error-pages",
  "cc-server-kit",
  "cc-static-server",
]
resolver = "2"

[workspace.package]
name = "cc-services"
version = "0.5.8"
edition = "2024"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[workspace.dependencies]
cc-auth = { workspace = true, path = "cc-auth" }
cc-server-kit = { workspace = true, path = "cc-server-kit", default-features = false }
cc-static-server = { workspace = true, path = "cc-static-server" }
cc-utils = { workspace = true, path = "cc-utils", default-features = false }
cc-ui-kit = { workspace = true, path = "cc-ui-kit" }

anyhow = "1"
bb8-redis = "0.20"
brotli = { version = "7", default-features = false }
bytes = "1"
chrono = { version = "0.4", default-features = false }
console_error_panic_hook = "0.1.7"
console_log = "1"
encoding_rs = "0.8"
flate2 = { version = "1", default-features = false }
http-body-util = "0.1"
icondata = { version = "0.5", default-features = false }
leptos = { version = "0.7", default-features = false }
leptos_i18n = { version = "0.5", default-features = false }
leptos_meta = "0.7"
leptos_router = "0.7"
leptos-use = { version = "0.15.5", default-features = false }
log = "0.4"
lucide-leptos = "1.1"
mime = "0.3"
notify = "6.1"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", default-features = false }
opentelemetry_sdk = { version = "0.27", default-features = false }
palette = "0.7"
passwords = "3.1"
reqwest = { git = "https://github.com/markcda/reqwest.git", branch = "msgpack-support", default-features = false }
rmp-serde = "1.3"
salvo = { version = "0.77", default-features = false }
serde = { version = "1", default-features = false }
serde_json = "1"
serde_yaml = "0.9"
sha3 = "0.10"
thaw = { version = "0.4.1", default-features = false }
tokio = { version = "1", default-features = false }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.28"
tracing-subscriber = "0.3"
zstd = { version = "0.13", default-features = false }
web-sys = { version = "0.3", default-features = false }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
