[package]
name = "cc-auth"
description = "Simple backend authorization system"
version = "0.3.2"
edition = "2024"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
bb8-redis = { workspace = true }
cc-utils = { workspace = true, default-features = false, features = ["salvo"] }
passwords = { workspace = true }

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
cc-utils = { workspace = true, default-features = false }
