[package]
name = "cc-server-kit"
description = "Highly configurable backend framework based on `salvo`"
version = "0.3.5"
edition = "2024"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[features]
default = ["http3", "cors", "acme", "oapi", "cc-utils", "otel", "force-https"]
http3 = ["salvo/quinn"]
acme = ["salvo/acme"]
cors = ["salvo/cors"]
websocket = ["salvo/websocket"]
otel = ["salvo/otel", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
oapi = ["salvo/oapi"]
proxy = ["salvo/proxy", "reqwest/stream"]
reqwest-msgpack = ["dep:reqwest"]
reqwest-http3 = ["reqwest/http3"]
cc-auth = ["dep:cc-auth"]
cc-utils = []
log-without-filtering = []
flash = ["salvo/flash"]
force-https = ["salvo/force-https"]
jwt-auth = ["salvo/jwt-auth"]
basic-auth = ["salvo/basic-auth"]
cache = ["salvo/cache"]
caching-headers = ["salvo/caching-headers"]
catch-panic = ["salvo/catch-panic"]
compression = ["salvo/compression"]
concurrency-limiter = ["salvo/concurrency-limiter"]
csrf = ["salvo/csrf"]
request-id = ["salvo/request-id"]
session = ["salvo/session"]
size-limiter = ["salvo/size-limiter"]
sse = ["salvo/sse"]
test = [
  "salvo/test",
  "dep:bytes",
  "dep:encoding_rs",
  "dep:http-body-util",
  "dep:brotli",
  "dep:flate2",
  "dep:mime",
  "dep:zstd",
  "dep:serde_json",
  "dep:rmp-serde",
]
timeout = ["salvo/timeout"]
trailing-slash = ["salvo/trailing-slash"]
tower-compat = ["salvo/tower-compat"]

[dependencies]
brotli = { optional = true, workspace = true, features = ["default"] }
bytes = { optional = true, workspace = true }
cc-auth = { optional = true, workspace = true }
cc-utils = { workspace = true, features = ["salvo", "reqwest"] }
encoding_rs = { optional = true, workspace = true }
flate2 = { optional = true, workspace = true, features = ["default"] }
http-body-util = { optional = true, workspace = true }
mime = { optional = true, workspace = true }
notify = { workspace = true }
opentelemetry = { optional = true, workspace = true }
opentelemetry-otlp = { optional = true, workspace = true, features = ["tonic"] }
opentelemetry_sdk = { optional = true, workspace = true, features = ["rt-tokio"] }
reqwest = { optional = true, workspace = true, features = ["json", "rustls-tls"] }
rmp-serde = { optional = true, workspace = true }
salvo = { workspace = true, features = ["affix-state", "compression", "rustls", "cookie"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { optional = true, workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { optional = true, workspace = true }
tracing-subscriber = { workspace = true }
zstd = { optional = true, workspace = true, features = ["default"] }

[package.metadata.cargo-all-features]
denylist = ["cc-auth", "flash", "cache", "compression", "csrf", "session", "jwt-auth", "basic-auth", "caching-headers", "catch-panic", "concurrency-limiter", "request-id", "size-limiter", "sse", "timeout", "trailing-slash", "tower-compat", "reqwest-msgpack", "reqwest-http3", "websocket", "proxy"]
