[package]
name = "cc-static-server"
description = "Simple static server"
version = "0.2.9"
edition = "2024"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[dependencies]
cc-server-kit = { workspace = true, features = ["http3", "cors", "acme", "oapi", "cc-utils", "otel", "force-https"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }
