[package]
name = "cc-static-server"
description = "Simple static server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
cc-server-kit = { workspace = true, features = ["http3", "cors", "acme", "oapi", "cc-utils", "otel", "force-https"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }
