[package]
name = "cc-ui-kit-leptos-test"
description = "CC UI Kit Test page for Leptos edition"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
cc-ui-kit = { workspace = true }
icondata = { workspace = true, features = ["ant-design-icons"] }
leptos = { workspace = true, features = ["csr"] }
lucide-leptos = { workspace = true }
palette = { workspace = true }
thaw = { workspace = true, features = ["csr"] }
