[package]
name = "cc-ui-kit"
description = "Powerful frontend framework based on Thaw & Leptos"
version = "0.1.0-alpha-10"
edition = "2024"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[dependencies]
cc-utils = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos-use = { workspace = true, features = ["use_color_mode"] }
log = { workspace = true }
lucide-leptos = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thaw = { workspace = true, features = ["csr"] }
web-sys = { workspace = true, features = ["Storage", "Window", "Navigator"] }
