[package]
name = "cc-ui-kit"
description = "Powerful frontend framework based on Thaw & Leptos"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
cc-utils = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos-use = { workspace = true, features = ["use_color_mode"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thaw = { workspace = true, features = ["csr"] }
web-sys = { workspace = true, features = ["Storage", "Window", "Navigator"] }
