[package]
name = "cc-utils"
description = "Rust Fullstack utils (strict error handling, `Consider` trait, MessagePack support, etc.) for Salvo and Yew/Dioxus/Leptos/*"
version = "0.5.7"
edition = "2024"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[features]
default = ["salvo", "reqwest"]
salvo = ["dep:salvo"]
reqwest = ["dep:reqwest"]

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"], optional = true }
rmp-serde = { workspace = true }
salvo = { workspace = true, features = ["oapi", "rustls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
