[package]
name = "cc-utils"
description = "Rust Fullstack utils (strict error handling, `Consider` trait, MessagePack support, etc.) for Salvo and Yew/Dioxus/Leptos/*"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = ["salvo", "reqwest"]
salvo = ["dep:salvo"]
reqwest = ["dep:reqwest"]

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"], optional = true }
rmp-serde = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
salvo = { workspace = true, features = ["oapi", "rustls"], optional = true }
